# cmdrx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docs/: cmdrx.1
examples/: test_config.json  test_prompt.py  verify_installation.py
packaging/debian/: control  rules
packaging/homebrew/: cmdrx.rb
packaging/rpm/: cmdrx.spec
scripts/: publish_pypi.py
src/cmdrx/: __init__.py  cli.py  config.py  core.py  exceptions.py  llm.py  output.py
tests/: __init__.py  test_core.py
